crates/language-v2/tests/src/fail/p0_parsing/unrecognized_variant/test.stderr
error: Expected a variant: 'Struct' or 'Enum' or 'Repeated' or 'Separated' or 'Precedence' or 'Trivia' or 'Keyword' or 'Token' or 'Fragment'
  --> src/fail/p0_parsing/unrecognized_variant/test.rs:20:49
   |
20 |             Topic(title = "Topic Two", items = [Unrecognized(true)])
   |                                                 ^^^^^^^^^^^^
